yamls/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wp
  namespace: default
  labels:
    app:  wp
spec:
  selector:
    matchLabels:
      app: wp
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  wp
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  wp
        image: wordpress:cli-php8.0
        resources:
          requests:
            cpu: 100m
            memory: 999Mi
          limits:
            cpu: 100m
            memory: 999Mi
        ports:
        - containerPort:  80
          name:  wp
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
