yamls/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp
  namespace: default
spec:
  selector:
    app: wp
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: wp
    protocol: TCP
    port: 80
    targetPort: 80
