yamls/wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wp.sinyleming.com
    secretName: wp-tls
  rules:
   - host: wp.sinyleming.com
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp
            port:
              number: 80
